@@ -77,8 +77,8 @@ public class WebTest {
 
     private void invokeServlet() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-            + contextRoot + "/createSession");
+        URL url = URI.create("http://" + host  + ":" + port
+            + contextRoot + "/createSession").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
