@@ -58,7 +58,7 @@ public class WebTestNG {
 
         String redirectTo = line.substring(index);
         System.out.println("Redirect to: " + redirectTo);
-        URL url = new URL(redirectTo);
+        URL url = URI.create(redirectTo).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
         int responseCode = conn.getResponseCode();
