@@ -93,7 +93,7 @@ public class WebTest {
                      + "/CreateSession";
         System.out.println("Connecting to: " + url);
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
 
         int code = conn.getResponseCode();
         if (code != 200) {
