@@ -85,7 +85,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot + "/CreateSession";
         System.out.println("Connecting to: " + url);
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
 
         int code = conn.getResponseCode();
         if (code != 200) {
